crates/sdk-tests/tests/template/template_with_two_default_fundable_hook_not_allowed.stderr
error: There can be only a single default `fundable hook`
 --> $DIR/template_with_two_default_fundable_hook_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
